--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,25 @@ RELEASE_MSG
 # Linux project files
 /Makefile
 /.ignore
+
+Binaries
+DerivedDataCache
+Intermediate
+Saved
+.vscode
+.vs
+*.VC.db
+*.opensdf
+
+*.opendb
+*.sdf
+*.sln
+*.suo
+*.xcodeproj
+*.xcworkspace
+
+
+
+
+
+
